fix overflow

--- a/src/styles/containers/_ego-form-interface.scss
+++ b/src/styles/containers/_ego-form-interface.scss
@@ -1,5 +1,5 @@
 .ego-form {
   .slide__transition {
-    height: inherit;
+    height: 100%;
   }
 }
